--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3839b40b-ab88-4cf9-8100-ad3cd909bf5a"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
